--- a/AppListaCurso/app/src/main/res/values/strings.xml
+++ b/AppListaCurso/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">AppListaCurso</string>
+    <string name="txt_titulo">Aplicativo Lista VIP Curso Android</string>
+    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
+    <string name="txt_hint_edit_telefone_de_contato">Telefone de contato</string>
+    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
+    <string name="txt_hint_edit_nome_do_curso">Nome do curso desejado</string>
+    <string name="btn_limpar">Limpar</string>
+    <string name="btn_salvar">Salvar</string>
+    <string name="btn_finalizar">Finalizar</string>
 </resources>
